<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#CCCC99" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large" />
    
    
    <TextView
        android:id="@+id/E_STATUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:paddingLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large" />

     <LinearLayout 
   			 android:layout_width="fill_parent"
		   	 android:layout_height="wrap_content"
		     android:orientation="vertical"
   			 android:paddingLeft="10dp">
	     <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <EditText
	        android:id="@+id/USER_EMAIL"
	        android:layout_width="300dp"
	        android:layout_height="45dp"
	        android:background="@drawable/round"
	        android:hint="@string/email_hint"
	        android:inputType="textEmailAddress"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large" />

     <LinearLayout 
   			 android:layout_width="wrap_content"
		   	 android:layout_height="wrap_content"
		     android:orientation="vertical"
   			 android:paddingLeft="80dp">
		    <Button
		        android:id="@+id/SETUP"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/set_email" 
		        android:textSize="25sp"
		        android:textColor="#ffffff"
		        android:background="@drawable/red_button"/>
		    
		    <TextView
        		android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
        		android:paddingTop="@dimen/padding_large" />
		    
		    <Button
		        android:id="@+id/LOGOUT"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/log_out" 
		        android:textSize="25sp"
		        android:textColor="#ffffff"
		        android:background="@drawable/red_button"/>
      </LinearLayout>
</LinearLayout>
</ScrollView>