<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#CCCC99" >

    <!-- Included header.xml here -->
	<ViewStub 
	    android:id="@+id/vsHeader" 
	    android:inflatedId="@+id/header" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout="@layout/header" />
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large" />
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large" /> 
    <TextView
        android:id="@+id/ABT_TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_binit"
        android:paddingLeft="5dp"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TEAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/team"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large" />
    <ImageView 
       android:id="@+id/logo"
	   android:layout_width="wrap_content"
	   android:layout_height="80dp"
	   android:layout_gravity="center"
	   android:src="@drawable/smsmedis_logo"
	   android:contentDescription="@string/edit"/>

</LinearLayout>